Build fast marshalling ring buffers via .fast()